--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
     "forceConsistentCasingInFileNames": true,
     "useDefineForClassFields": true,
     "sourceMap": true,
+    "outDir": "build",
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
