--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
   "include": ["env.d.ts", "src/**/*", "src/**/*.vue"],
   "compilerOptions": {
     "target": "esnext",
-    "module": "esnext",
+    "module": "es2022",
     "strict": true,
     "jsx": "preserve",
     "moduleResolution": "node",
