--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apexcharts": "^3.35.5",
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
+    "axios-case-converter": "^0.9.0",
     "core-js": "^3.25.0",
     "pinia": "^2.0.22",
     "postcss": "^8.4.16",
