--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   "dependencies": {
     "apexcharts": "^3.35.5",
     "autoprefixer": "^10.4.8",
+    "axios": "^0.27.2",
+    "axios-case-converter": "^0.9.0",
     "core-js": "^3.25.0",
     "pinia": "^2.0.22",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
+    "vue-toastification": "^2.0.0-rc.5",
     "vue3-apexcharts": "^1.4.1"
   },
   "devDependencies": {
@@ -29,6 +32,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "npm-run-all": "^4.1.5",
+    "prettier": "2.7.1",
     "typescript": "~4.7.4",
     "vite": "^3.0.9",
     "vue-tsc": "^0.40.7"
