--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,5 +1,7 @@
 {
   "volar.takeOverMode.enabled": true,
   "tsserver.enable": false,
-  "prettier.disableLanguages": []
+  "coc.preferences.formatOnSaveFiletypes": [
+    "vue"
+  ]
 }
