--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "axios-case-converter": "^0.9.0",
     "core-js": "^3.25.0",
+    "fast-sort": "^3.2.0",
     "pinia": "^2.0.22",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
